// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactForm /> renders correctly the component 1`] = `
<DocumentFragment>
  <div
    class="form card"
  >
    <div
      class="card-body"
    >
      <form
        class=""
        data-testid="contact-form"
      >
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.givenname
          </label>
          <input
            class="form-control"
            maxlength="24"
            minlength="2"
            placeholder="test.givenname"
            required=""
            type="text"
            value="test"
          />
        </div>
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.surname
          </label>
          <input
            class="form-control"
            maxlength="24"
            minlength="2"
            placeholder="test.surname"
            required=""
            type="text"
            value="surname test"
          />
        </div>
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.email
          </label>
          <input
            class="form-control"
            placeholder="test.email"
            required=""
            type="email"
            value="test@email.es"
          />
        </div>
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.phone
          </label>
          <input
            class="form-control"
            maxlength="12"
            placeholder="test.phone"
            required=""
            type="tel"
            value="12345"
          />
        </div>
        <div
          class="d-flex justify-content-between"
        >
          <button
            class="w-100 btn btn-secondary"
            data-testid="contact-form-back-btn"
            type="button"
          >
            test.backBtn
          </button>
          <button
            class="w-100 ms-3 btn btn-primary"
            type="submit"
          >
            test.submit
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ContactForm /> show errors correctly: errors 1`] = `
<DocumentFragment>
  <div
    class="form card"
  >
    <div
      class="card-body"
    >
      <form
        class=""
        data-testid="contact-form"
      >
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.givenname
          </label>
          <input
            class="form-control"
            maxlength="24"
            minlength="2"
            placeholder="test.givenname"
            required=""
            type="text"
            value="test"
          />
        </div>
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.surname
          </label>
          <input
            class="form-control"
            maxlength="24"
            minlength="2"
            placeholder="test.surname"
            required=""
            type="text"
            value="surname test"
          />
        </div>
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.email
          </label>
          <input
            class="form-control"
            placeholder="test.email"
            required=""
            type="email"
            value="test@email.es"
          />
          <div
            class="text-danger mt-2 mb-0"
            data-testid="error-box-email"
          >
            <span>
              errors.email_error
            </span>
          </div>
        </div>
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            test.phone
          </label>
          <input
            class="form-control"
            maxlength="12"
            placeholder="test.phone"
            required=""
            type="tel"
            value="12345"
          />
          <div
            class="text-danger mt-2 mb-0"
            data-testid="error-box-phone"
          >
            <span>
              errors.phone_error
            </span>
          </div>
        </div>
        <div
          class="d-flex justify-content-between"
        >
          <button
            class="w-100 btn btn-secondary"
            data-testid="contact-form-back-btn"
            type="button"
          >
            test.backBtn
          </button>
          <button
            class="w-100 ms-3 btn btn-primary"
            type="submit"
          >
            test.submit
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
